--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Farm Diary</title>
 
-  <!-- Default theme color for PWA (will be overridden dynamically) -->
-  <meta name="theme-color" content="#4CAF50">
+  <meta name="theme-color" content="#121212"> <!-- matches manifest -->
+  <style>
+  body {
+    background-color: #121212; /* matches manifest */
+  }
+  </style>
 
 </head>
 
